--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "pdm.backend"
 
 [project]
 name = "asyncstream"
+dynamic = ["version"]
 description = "Async s3 stream"
 authors = [
     {name = "Francois Dang Ngoc", email = "francois.dangngoc@gmail.com"},
@@ -25,7 +26,6 @@ classifiers=[
     'Programming Language :: Python :: 3'
 ]
 requires-python = ">=3.8,<3.12"
-version="1.0.0"
 
 [project.urls]
 Source = "http://github.com/chimpler/async-stream/"
@@ -52,6 +52,9 @@ addopts = [
 testpaths = [
     "tests/",
 ]
+
+[tool.pdm.version]
+source = "scm"
 
 [tool.pdm.build]
 includes = [
